# ulaval-notify

./: .gitattributes  .gitignore  .pylintrc  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
docs/: Makefile  conf.py  index.rst  make.bat  modules.rst  ulaval_notify.api.rst  ulaval_notify.rst
misc/: ulaval-notify.service
tests/: test_configuration.py
tests/api/: test_notifications.py
ulaval_notify/: configuration.py  constants.py  main.py  options.py  utils.py
ulaval_notify/api/: constants.py  login.py  notifications.py  session.py
