[bdist_wheel]
universal = 1

[wheel]
universal = 1

[aliases]
test = pytest

[tool:pytest]
addopts = -l --doctest-modules
norecursedirs = .git doc build dist *.egg-info .mypy_cache .ropeproject

[flake8]
exclude = .git, __pycache__, docs/source/conf.py, old, build, dist
show-source = 1
statistics = 1
ignore = E501, D400

[metadata]
description-file = README.rst
